@@ -32,6 +32,10 @@ AM_PATH_GTK(1.1.5, ,
 AM_PATH_GDK_IMLIB(1.8, ,
         AC_MSG_ERROR([*** IMLIB 1.8 not installed - please install first ***]))
 
+# We don't want to put GTK+ back into the shlibdeps, because that
+# could cause the _wrong_ version of GTK+ to be pulled in.
+GDK_IMLIB_LIBS=`echo $GDK_IMLIB_LIBS | sed -e 's/-lgdk / /' -e 's/-lgtk//' -e 's/-lglib//'`
+
 # Checks for header files.
 AC_HEADER_STDC
 
