@@ -1,6 +1,6 @@
 SUBDIRS = Theme
 INCLUDES = $(GTK_CFLAGS) $(GDK_IMLIB_CFLAGS)
-LIBS = $(GTK_LIBS) $(GDK_IMLIB_LIBS)
+LIBS = $(GDK_IMLIB_LIBS)
 enginedir = $(libdir)/gtk/themes/engines
 
 # replace the "pixmap" prefix with whatever you're using
